# Automated-Validation-for-AzNFS

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: chain-watchdog.yml  db-purge-restricted.yml  phase2-publish.yml  phase3-validate.yml  scan-marketplace.yml  verify-mi-ado.yml
db/: schema.sql
deploy/: aznfs-scan-trigger.service  aznfs-scan-trigger.timer
docs/: EXTENDING-TO-AZFILESAUTH-AOD.md  PHASE3.md
phase3/: AUTOMATION.md  README.md  run_phase3.py  setup_lisa.sh
phase3/examples/: jobs.example.json
phase3/orchestrator/: config.py  record_result.py  schema_phase3.sql
phase3/runbooks/: aznfs_multidistro.yml  aznfs_validation.yml
phase3/testsuites/: aznfs_validation.py
scripts/: chain_watchdog.py  config.py  db_manager.py  notifier.py  scan_marketplace.py
src/phase2/: distro_map.yaml  orchestrator.py  pmc_packages.py  run.py
tests/: test_derivation.py  test_gate1.py  test_notifier.py  test_phase2_orchestrator.py  test_phase3_record_result.py  test_pmc_packages.py  test_run.py
